---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/window-1.prql
---
SELECT
  orders.*,
  AVG(value) OVER (
    ORDER BY
      day ROWS BETWEEN 3 PRECEDING
      AND 3 FOLLOWING
  ) AS centered_weekly_average,
  SUM(value) OVER (
    PARTITION BY order_month
    ORDER BY
      day ROWS BETWEEN UNBOUNDED PRECEDING
      AND CURRENT ROW
  ) AS monthly_running_total
FROM
  orders
